k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-server-service
  labels:
    app: python-server
spec:
  selector:
    app: python-server
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
