k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-server-ingress
  labels:
    app: python-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sau-portal.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-server-service
                port:
                  number: 8000
